@@ -50,7 +50,7 @@ The value that you specify here is used as the `input_type` for each event publi
 
 A list of regular expressions to match the lines that you want Filebeat to exclude. Filebeat drops any lines that match a regular expression in the list. By default, no lines are dropped.
 
-If <<multiline>> is also specified, each multiline message is combined into a single line before the lines are filtered by `exclude_lines`. 
+If <<multiline>> is also specified, each multiline message is combined into a single line before the lines are filtered by `exclude_lines`.
 
 The following example configures Filebeat to drop any lines that start with "DBG".
 
@@ -63,7 +63,7 @@ exclude_lines: ["^DBG"]
 
 A list of regular expressions to match the lines that you want Filebeat to include. Filebeat exports only the lines that match a regular expression in the list. By default, all lines are exported.
 
-If <<multiline>> is also specified, each multiline message is combined into a single line before the lines are filtered by `include_lines`. 
+If <<multiline>> is also specified, each multiline message is combined into a single line before the lines are filtered by `include_lines`.
 
 The following example configures Filebeat to export any lines that start with "ERR" or "WARN":
 
@@ -116,8 +116,27 @@ If the custom field names conflict with other field names added by Filebeat, the
 ===== ignore_older
 
 If this option is specified, Filebeat
-ignores any files that were modified before the specified timespan.
-You can use time strings like 2h (2 hours) and 5m (5 minutes). The default is 24h.
+ignores any files that were modified before the specified timespan. This is disabled by default.
+
+You can use time strings like 2h (2 hours) and 5m (5 minutes). The default is 0, which means disable.
+Commenting out the config has the same affect as setting it to 0.
+
+Files which were falling under ignore_older and are updated again, will start
+from the offset the file was at when it was last ignored by ignore_older. As an example:
+A file was not modified for 90 hours and the offset is at 200. Now a new line is added and
+the last modification date is updated. After scan_frequency detects the change the crawling
+starts at the offset 200. In case the file was falling under ignore_older already when filebeat
+was started, the first 200 lines are never sent. In case filebeat was started earlier, the 200
+chars were already sent and it now continues at the old offset.
+
+
+===== close_older
+
+After a file was not modified for the duration of close_older, the file handle will be closed.
+After closing the file, a file change will only be detected after scan_frequency instead of almost
+instant.
+
+You can use time strings like 2h (2 hours) and 5m (5 minutes). The default is 1h.
 
 
 ===== scan_frequency
@@ -147,9 +166,9 @@ This setting is especially useful for multiline log messages, which can get larg
 [[multiline]]
 ===== multiline
 
-Options that control how Filebeat deals with log messages that span multiple lines. Multiline messages are common in files that contain Java stack traces. 
+Options that control how Filebeat deals with log messages that span multiple lines. Multiline messages are common in files that contain Java stack traces.
 
-The following example shows how to configure Filebeat to handle a multiline message where the first line of the message begins with a bracket (`[`). 
+The following example shows how to configure Filebeat to handle a multiline message where the first line of the message begins with a bracket (`[`).
 
 [source,yaml]
 -------------------------------------------------------------------------------------
@@ -160,7 +179,7 @@ multiline:
 
 -------------------------------------------------------------------------------------
 
-Filebeat takes all the lines that do not start with `[` and combines them with the previous line that does. For example, you could use this configuration to join the following lines of a multiline message into a single event: 
+Filebeat takes all the lines that do not start with `[` and combines them with the previous line that does. For example, you could use this configuration to join the following lines of a multiline message into a single event:
 
 ["source","sh",subs="attributes,callouts"]
 -------------------------------------------------------------------------------------
@@ -173,7 +192,7 @@ Filebeat takes all the lines that do not start with `[` and combines them with t
 
 You specify the following settings under `multiline` to control how Filebeat combines the lines in the message:
 
-*`pattern`*:: Specifies the regular expression pattern to match. 
+*`pattern`*:: Specifies the regular expression pattern to match.
 
 *`negate`*:: Defines whether the pattern is negated. The default is `false`.
 
@@ -182,10 +201,10 @@ You specify the following settings under `multiline` to control how Filebeat com
 [options="header"]
 |=======================
 |Setting for `negate` | Setting for `match` | Result
-|`false`              | `after`             | Consecutive lines that match the pattern are appended to the previous line that doesn't match. 
-|`false`              | `before`            | Consecutive lines that match the pattern are prepended to the next line that doesn't match. 
-|`true`               | `after`             | Consecutive lines that don't match the pattern are appended to the previous line that does match. 
-|`true`               | `before`            | Consecutive lines that don't match the pattern are prepended to the next line that does match. 
+|`false`              | `after`             | Consecutive lines that match the pattern are appended to the previous line that doesn't match.
+|`false`              | `before`            | Consecutive lines that match the pattern are prepended to the next line that doesn't match.
+|`true`               | `after`             | Consecutive lines that don't match the pattern are appended to the previous line that does match.
+|`true`               | `before`            | Consecutive lines that don't match the pattern are prepended to the next line that does match.
 |=======================
 +
 NOTE: The `after` setting is equivalent to `previous` in https://www.elastic.co/guide/en/logstash/current/plugins-codecs-multiline.html[Logstash], and `before` is equivalent to `next`.
@@ -196,7 +215,7 @@ lines are discarded. The default is 500.
 
 *`timeout`*:: After the specified timeout, Filebeat sends the multiline event even if no new pattern is found to start a new event. The default is 5s.
 
-Here's an example configuration that shows the regular expression for a slightly more complex example: 
+Here's an example configuration that shows the regular expression for a slightly more complex example:
 
 ["source","sh",subs="attributes,callouts"]
 -------------------------------------------------------------------------------------
@@ -211,7 +230,7 @@ In this example, the pattern matches the following lines:
 * a line that begins with spaces followed by the word `at` or `...`
 * a line that begins with the words `Caused by:`
 
-You could use this configuration to join the following lines from a Java stack trace into a single event: 
+You could use this configuration to join the following lines from a Java stack trace into a single event:
 
 ["source","sh",subs="attributes,callouts"]
 -------------------------------------------------------------------------------------
