@@ -114,6 +114,7 @@ class Test(TestCase):
         self.render_config_template(
             path=os.path.abspath(self.working_dir) + "/log/*",
             ignoreOlder="1s",
+            closeOlder="1s",
             scan_frequency="0.1s",
         )
 
@@ -174,3 +175,57 @@ class Test(TestCase):
         # Check that output file has the same number of lines as the log file
         assert 1 == len(output)
         assert output[0]["message"] == "line in log file"
+
+
+    def test_close_older(self):
+        """
+        Test that close_older closes the file but reading
+        is picked up again after scan_frequency
+        """
+        self.render_config_template(
+                path=os.path.abspath(self.working_dir) + "/log/*",
+                ignoreOlder="1h",
+                closeOlder="1s",
+                scan_frequency="0.1s",
+        )
+
+        os.mkdir(self.working_dir + "/log/")
+        testfile = self.working_dir + "/log/test.log"
+
+        filebeat = self.start_filebeat(debug_selectors=['*'])
+
+        # wait for first  "Start next scan" log message
+        self.wait_until(
+                lambda: self.log_contains(
+                        "Start next scan"),
+                max_timeout=10)
+
+        lines = 0
+
+        # write first line
+        lines += 1
+        with open(testfile, 'a') as file:
+            file.write("Line {}\n".format(lines))
+
+        # wait for log to be read
+        self.wait_until(
+                lambda: self.output_has(lines=lines),
+                max_timeout=15)
+
+        # wait for file to be closed due to close_older
+        self.wait_until(
+                lambda: self.log_contains(
+                        "Closing file: {}\n".format(os.path.abspath(testfile))),
+                max_timeout=10)
+
+        # write second line
+        lines += 1
+        with open(testfile, 'a') as file:
+            file.write("Line {}\n".format(lines))
+
+        self.wait_until(
+                # allow for events to be send multiple times due to log rotation
+                lambda: self.output_count(lambda x: x >= lines),
+                max_timeout=5)
+
+        filebeat.kill_and_wait()
